# realsense-test

./: BGR_sample.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gui
depth/: CMakeCache.txt  CMakeLists.txt  IR_sample.cpp  Makefile  cmake_install.cmake  gui
